# colours-cli

./: README.md  pyproject.toml
colours/: __init__.py  cli.py
