[tool.poetry]
name = "colours"
version = "0.0.1"
description = "A neat command for printing a coloured ANSI colour code reference to the terminal."
authors = ["Tom Van Manen <tom.on.github@gmail.com>"]
readme = "README.md"
license = "Hippocratic-3.0"
packages = [{include = "colours"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
colours = "colours.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
